The cache header issue is fixed #28
